--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,10 +112,9 @@ By counting electron and muon pairs from Z bosons and applying data-driven corre
 the approach achieves 2–4% precision over short timescales and shows excellent agreement with the standard ATLAS luminosity measurements.
 This technique offers a reliable, independent cross-check for ATLAS luminosity monitoring.</p>
 <h1>2025</h1>
-<p>A method of <a href="/precise-length-control-for-large-language-models.html">constraining the output length</a> of decoder-only LLMs by introducing a countdown-style positional encodings.
-<a href="">CLLM</a></p>
-<p>A simple fine-tuning method using countdown-style positional encodings (LDPE) lets decoder-only LLMs </p>
-<p>generate outputs with exact token-level length — no hacks, no loss in quality.</p>  </div>
+<p><a href="/precise-length-control-for-large-language-models.html">LDPE</a> is a method of constraining the output length of decoder-only LLMs by introducing a countdown-style positional encoding.
+This is introduced as an additional sinusoidal embedding which can be finetuned alongside existing embeddings with a small QA dataset for any foundation model.
+Results show that this method is extremely effective and is a very low cost way to introduce strict length requirements for generated outputs.</p>  </div>
 </article>
 
 <footer>
